# wxMagazzino

./: CMakeLists.txt  Magazzino.fbp  Magazzino.h  MagazzinoFrame.cpp  MagazzinoFrame.h  Makefile  MyProjectBase.cpp  MyProjectBase.h  main.cpp  wxMagazzinoFrame.cpp  wxMagazzinoFrame.h
